# protos

./: Cargo.toml  README.md
assets/shaders/: line_material.wgsl
src/: ai.rs  camera.rs  fast_unit.rs  fast_unit_index.rs  grid.rs  lib.rs  light.rs  main.rs  slow_unit.rs  sparse_grid.rs  ui.rs
src/ai/: add_cube.rs  building.rs  fast_unit.rs  fast_unit_index.rs  ground.rs  joints.rs  kinematic_joints.rs  kinematic_rig.rs  mod.rs  pathfind.rs  platform.rs  slow_unit.rs  sparse_grid.rs  swarm.rs  terrain.rs  velocity.rs
src/anim/: auto_collider.rs  fox.rs  joint.rs  mod.rs  rig.rs
src/mesh/: cone.rs  cylinder.rs  lines.rs  mod.rs
src/ui/: add_cube.rs  basic_materials.rs  handle_gizmo.rs  lines.rs  mod.rs  move_gizmo.rs  multi_select.rs  selection.rs  side_panel.rs  transform_gizmo.rs
