[package]
name = "protos"
version = "0.1.0"
authors = ["Călin Ardelean <mmn80cpu@gmail.com>"]
edition = "2021"

publish = false

[dependencies]
rand = "0.8"
rand_distr = "0.4"
futures-lite = "2.0"
bevy = "0.12"
bevy_egui = "0.23"
bevy-inspector-egui = "0.21"
bevy_xpbd_3d = { version = "0.3", features = ["parallel"] }
parry3d = "0.13"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

#[patch.crates-io]
#bevy = { path = "../bevy" }
